--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "test": "tape test/*.js",
     "lint": "standard"
   },
-  "keywords": [
-  ],
-  "dependencies": {},
+  "keywords": [],
+  "dependencies": {
+    "float-hsl2rgb": "^1.0.2"
+  },
   "devDependencies": {
     "tape": "~4.6.2",
     "standard": "~10.0.0"
