--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "keywords": [],
   "dependencies": {
-    "float-hsl2rgb": "^1.0.2",
     "brfs": "^1.4.3",
-    "browserify": "^14.1.0"
+    "browserify": "^14.1.0",
+    "float-hsl2rgb": "^1.0.2",
+    "node-localip": "^0.1.3"
   },
   "devDependencies": {
     "ecstatic": "^2.1.0"
